# meta-albion-v2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
apps/web/: .env.example  .gitignore  package-lock.json  package.json
apps/web/src/: app.html
apps/web/src/lib/: api.test.ts  api.ts  config.ts  filters.test.ts  filters.ts  format.ts  item-labels.ts  item.test.ts  item.ts  slots.ts
apps/web/src/lib/components/: SlotLeaderboardPage.svelte
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/builds/[buildKey]/: +page.svelte
apps/web/src/routes/families/[slot]/[familyKey]/: +page.svelte  +page.ts
apps/web/src/routes/items/[slot]/: +page.svelte  +page.ts
docs/: API_FRONTEND_CONTRACT.md  PROJECT_DIRECTION.md  PROJECT_PLAN.md  RAILWAY_DEPLOYMENT.md  VPS_SINGLE_HOST_PLAN.md
src/albion_analytics/: __init__.py  config.py  regions.py
src/albion_analytics/analysis/: __init__.py  build_key.py  event_contexts.py  loadouts.py  summary.py
src/albion_analytics/api/: __init__.py  client.py
src/albion_analytics/ingestion/: __init__.py  battle_enrichment.py  event_feed.py  player_kills.py
src/albion_analytics/models/: __init__.py  equipment.py  events.py
src/albion_analytics/ops/: __init__.py  checks.py
src/albion_analytics/scripts/: __init__.py  aggregate_daily.py  check_ops.py  cleanup_retention.py  collect_events.py  enrich_battles.py  fetch_sample.py  init_db.py  normalize_events.py  ranking_builds.py  ranking_items.py  serve_api.py  top_builds.py  top_items.py
src/albion_analytics/server/: __init__.py  app.py
src/albion_analytics/storage/: __init__.py  aggregates_repo.py  battle_contexts_repo.py  db.py  event_contexts_repo.py  events_repo.py  loadouts_repo.py  ops_repo.py  outcomes_repo.py  retention_repo.py  schema.py  status_repo.py
tests/: test_api_app.py  test_battle_contexts.py  test_build_key.py  test_daily_aggregates.py  test_event_contexts.py  test_event_feed.py  test_events_repo.py  test_gameinfo_client.py  test_kill_event_parse.py  test_loadout_extraction.py  test_ops_checks.py  test_outcomes_repo.py  test_regions.py  test_retention_repo.py
(+1 files in other folders)
