[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "albion-analytics"
version = "0.1.0"
description = "Albion Online kill/build statistics — ingestion and analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[project.scripts]
albion-fetch-sample = "albion_analytics.scripts.fetch_sample:main"
albion-init-db = "albion_analytics.scripts.init_db:main"
albion-collect-events = "albion_analytics.scripts.collect_events:main"
albion-normalize-events = "albion_analytics.scripts.normalize_events:main"
albion-top-items = "albion_analytics.scripts.top_items:main"
albion-top-builds = "albion_analytics.scripts.top_builds:main"
albion-aggregate-daily = "albion_analytics.scripts.aggregate_daily:main"
albion-ranking-items = "albion_analytics.scripts.ranking_items:main"
albion-ranking-builds = "albion_analytics.scripts.ranking_builds:main"

[tool.hatch.build.targets.wheel]
packages = ["src/albion_analytics"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
